test_data/Json/Unexpected/Unserializable/InvalidModelType/Capability/wrong.json.exception
Expected the model type 'Capability', but got soReallyUtterlyInvalid at: modelType